notes i forgot to push from the cert exam

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 /Fall_2024.code-workspace
 /Kuber for Beginners.pdf
 /KubernetesForBeginners-MumshadMannambeth.pdf
+/practiceTest.md
+/practiceTest2.md
+/react-java-mysql
+/spring-postgres
+
